final version of Semestral thesis repository, added sources

--- a/02_train_full_dataset.ipynb
+++ b/02_train_full_dataset.ipynb
@@ -9,9 +9,17 @@
     "__CML data:__  \n",
     "Imported from pycomlink (Chwala C:): https://github.com/pycomlink/pycomlink\n",
     "\n",
-    "__Sources: All code from [2]__  \n",
-    "github: https://github.com/jpolz/cml_wd_pytorch/tree/main  \n",
-    "thesis: https://doi.org/10.5194/amt-13-3835-2020"
+    "__Sources:__  \n",
+    "Christian Chwala, Julius Polz, Max Graf, DanSereb, nblettner, keis f, and\n",
+    "yboose. pycomlink/pycomlink: v0.4.0, Oct 2024. URL: https://github.com/\n",
+    "pycomlink/pycomlink, doi:10.5281/zenodo.4810169.\n",
+    "\n",
+    "Julius Polz and waggerle. jpolz/cml_wd_pytorch, Sep 2024. URL: https:\n",
+    "//github.com/jpolz/cml_wd_pytorch.\n",
+    "\n",
+    "Julius Polz and Christian Chwala. jpolz/cnn_cml_wet-dry_example: Cnns for\n",
+    "rain event detection with cmls (v0.1), Dec 2019. URL: https://github.com/\n",
+    "jpolz/cnn_cml_wet-dry_example, doi:10.5281/zenodo.3580274.\n"
    ]
   },
   {
@@ -156,7 +164,7 @@
     "3. calculating TRSL\n",
     "4. Interpolation  \n",
     "\n",
-    "pycomlink https://github.com/pycomlink/pycomlink/blob/master/notebooks/Basic%20CML%20processing%20workflow.ipynb"
+    "source: pycomlink https://github.com/pycomlink/pycomlink/blob/master/notebooks/Basic%20CML%20processing%20workflow.ipynb"
    ]
   },
   {
@@ -960,7 +968,7 @@
     "#### Agregate 10min measurements into sample\n",
     "To build samples for CNN. rain event will be predicted for whole sample\n",
     "10 times 1 min time step = 10min time window   \n",
-    "source: chatGPT\n",
+    "\n",
     "\n",
     "__TODO: Possible simplification using .reshape or .view and rewriting trsl, ref_wd__"
    ]
@@ -2263,7 +2271,7 @@
    "source": [
     "#### Training/Testing data splitting + converting to tensors\n",
     "<span style=\"color:red\">TODO: </span>add validation data: 1 cml  \n",
-    "https://github.com/jpolz/cml_wd_pytorch/blob/main/wd_pytorch/train_cnn.ipynb [2]"
+    "source: https://github.com/jpolz/cml_wd_pytorch/blob/main/wd_pytorch/train_cnn.ipynb [2]"
    ]
   },
   {
@@ -2759,7 +2767,7 @@
    "source": [
     "#### ROC curve ... calculated for whole testing dataset\n",
     "\n",
-    "source: [2], https://github.com/jpolz/cnn_cml_wet-dry_example/blob/master/CNN_for_CML_example_nb.ipynb  "
+    "source: https://github.com/jpolz/cnn_cml_wet-dry_example/blob/master/CNN_for_CML_example_nb.ipynb  "
    ]
   },
   {
@@ -2851,7 +2859,7 @@
    "metadata": {},
    "source": [
     "#### MCC, ACC, confusion matrix ... calculated for whole testing dataset\n",
-    "source: [2], https://github.com/jpolz/cnn_cml_wet-dry_example/blob/master/CNN_for_CML_example_nb.ipynb"
+    "source: https://github.com/jpolz/cnn_cml_wet-dry_example/blob/master/CNN_for_CML_example_nb.ipynb"
    ]
   },
   {
